cabal-version:       >=1.10
name:                jieba-hs
version:             0.1.0.0
synopsis:            Jieba Chinese Word Segmentation Library
description:
    This is a port of the Jieba Chinese Word Segmentation library which was 
    originally written in Python. The gist of the segmentation algorithm is
    that Chinese word segmentation can be converted into a problem
    of finding the optimal path in a directed acyclic graph. Such a path can
    then be efficiently found via dynamic programming.

    Other features include (some WIP) tokenization, TF-IDF keyword extraction,
    usage of an HMM to fill in dictionary gaps, and customizable dictionaries.
-- bug-reports:
license:             GPL-3
license-file:        LICENSE
author:              Ethan Kiang
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules: Jieba
  other-modules:
      Jieba.Dictionary.FreqDict
      Jieba.Types.PosTag
      Jieba.Types.Units
      Jieba.Types.HmmState
      Jieba.Graph
      Jieba.Parsec.FreqDict
      Jieba.Parsec.HmmWeights
      Jieba.FinalSeg
      Jieba.Dictionary.HmmDict
      Jieba.Cut
  build-depends:
    base >=4.12
    , containers >=0.6.0.1
    , array >=0.5.3.0
    , parsec >=3.1.13.0
    , mtl >= 2.2.2
    , dlist >= 1.0
  hs-source-dirs:  src
  default-language:    Haskell2010

executable jieba-hs
  main-is:             Main.hs
  other-modules:
      Jieba
      Jieba.Dictionary.FreqDict
      Jieba.Types.PosTag
      Jieba.Types.Units
      Jieba.Types.HmmState
      Jieba.Graph
      Jieba.Parsec.FreqDict
      Jieba.Parsec.HmmWeights
      Jieba.FinalSeg
      Jieba.Dictionary.HmmDict
      Jieba.Cut
  -- other-extensions:
  build-depends:
    base >=4.12
    , containers >=0.6.0.1
    , array >=0.5.3.0
    , parsec >=3.1.13.0
    , mtl >= 2.2.2
    , dlist >= 1.0

  hs-source-dirs:      src
  default-language:    Haskell2010
